--- a/amazon.css
+++ b/amazon.css
@@ -4,5 +4,11 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Outfit;
-
+}
+body{
+    background-color: aqua;
+}
+a{
+    text-decoration: none;
+    color:inherit;
 }
